Added title/ author/ candidate no. Started on analysis

--- a/Analysis/analysis.tex
+++ b/Analysis/analysis.tex
@@ -3,9 +3,10 @@
 \section{Introduction}
 
 \subsection{Client Identification}
-
+My client is Kevan Andrew Richard Rees. He is 49 years old, and has many years of experience working with and around computers and computer software. He graduated from Oxford University with ---enter degree here---. He then worked for IBM for 26 years after that. 
+Recently, he took a voluntary redundancy from IBM, and is now working as a Contractor, specialising in Mainframe Computers. His current contract is for the Royal Bank of Scotland, improving their Mainframe Computer.
 \subsection{Define the current system}
-
+	
 \subsection{Describe the problems}
 
 \subsection{Section appendix}
