--- a/Analysis/analysis.tex
+++ b/Analysis/analysis.tex
@@ -3,12 +3,13 @@
 \section{Introduction}
 
 \subsection{Client Identification}
-My client is Kevan Andrew Richard Rees. He is 49 years old, and has many years of experience working with and around computers and computer software. He graduated from Oxford University with ---enter degree here---. He then worked for IBM for 26 years after that. 
-Recently, he took a voluntary redundancy from IBM, and is now working as a Contractor, specialising in Mainframe Computers. His current contract is for the Royal Bank of Scotland, improving their Mainframe Computer.
-\subsection{Define the current system}
-	
-\subsection{Describe the problems}
+My client is Kevan Andrew Richard Rees. He is 49 years old, and has many years of experience working with and around computers and computer software. He graduated from Oxford University with and BA(Hons) Physics. He then worked for IBM for 26 years after that. 
 
+In 2012, he took a voluntary redundancy from IBM, and is now working as a Self Employed Contractor, specialising in Mainframe Computers. His current contract is for the Royal Bank of Scotland.
+\subsection{Define the current system}
+The current system that Kevan is using is mostly paper based. Kevan gave the examples of 'to-do lists' here. When Kevan is given a task, or sets himself a task, we will record it metally, and he will record it on a peice of paper, or in a notebook. The system is all human/notebook based.
+\subsection{Describe the problems}
+This makes things hard to prioritize, as tasks are mostly recorded in order of when they are received/set. Another problem would be the amount of detail that is recorded for each task. This can be very inconsistent, and with no base attributes for a given task, it is even harder to organize lists of tasks. Kevan also has difficulty keeping track of his paper based records. Kevan says that it is difficult for him to make sure all tasks are completed because of this.
 \subsection{Section appendix}
 
 \section{Investigation}
@@ -16,7 +17,11 @@ Recently, he took a voluntary redundancy from IBM, and is now working as a Contr
 \subsection{The current system}
 
 \subsubsection{Data sources and destinations}
-
+\begin{center}
+	\begin{tabular}|p{4cm}|p{6cm}|p{4cm}|p{4cm}
+		\hline
+		\textbf{Source} & \textbf{Data} & \textbf{Example Data} & \textbf{Destination} \\ \hline
+		User & Task Details & DueDate &  
 \subsubsection{Algorithms}
 
 \subsubsection{Data flow diagram}
