--- a/Analysis/analysis.tex
+++ b/Analysis/analysis.tex
@@ -7,7 +7,7 @@ My client is Kevan Andrew Richard Rees. He is 49 years old, and has many years o
 
 In 2012, he took a voluntary redundancy from IBM, and is now working as a Self Employed Contractor, specialising in Mainframe Computers. His current contract is for the Royal Bank of Scotland.
 \subsection{Define the current system}
-The current system that Kevan is using is mostly paper based. Kevan gave the examples of 'to-do lists' here. When Kevan is given a task, or sets himself a task, we will record it metally, and he will record it on a peice of paper, or in a notebook. The system is all human/notebook based.
+The current system that Kevan is using is mostly paper based. Kevan gave the examples of 'to-do lists' here. When Kevan is given a task, or sets himself a task, he will record it metally, or he will record it on a peice of paper, or in a notebook. The system is all human/notebook based.
 \subsection{Describe the problems}
 This makes things hard to prioritize, as tasks are mostly recorded in order of when they are received/set. Another problem would be the amount of detail that is recorded for each task. This can be very inconsistent, and with no base attributes for a given task, it is even harder to organize lists of tasks. Kevan also has difficulty keeping track of his paper based records. Kevan says that it is difficult for him to make sure all tasks are completed because of this.
 \subsection{Section appendix}
@@ -18,10 +18,14 @@ This makes things hard to prioritize, as tasks are mostly recorded in order of w
 
 \subsubsection{Data sources and destinations}
 \begin{center}
-	\begin{tabular}|p{4cm}|p{6cm}|p{4cm}|p{4cm}
+	\begin{tabular}{|p{2cm}|p{4cm}|p{2cm}|p{2cm}|}
 		\hline
 		\textbf{Source} & \textbf{Data} & \textbf{Example Data} & \textbf{Destination} \\ \hline
-		User & Task Details & DueDate &  
+		User & Task Details & DueDate &  Database \\ \hline
+		User & 'Organise By' Option & ClientName & Database \\ \line
+		
+	\end{tabular}
+\end{center}
 \subsubsection{Algorithms}
 
 \subsubsection{Data flow diagram}
